--- a/writeup/tay_replication_of_soderstrom2015.Rmd
+++ b/writeup/tay_replication_of_soderstrom2015.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Replication of Judgments of Learning as Memory Modifiers by Soderstrom, N. C., Clark, C. T., Halamish, V. & Bjork, E. L. (2015, Journal of Experimental Psychology: Learning, Memory, and Cognition, Vol. 41, No. 2, 553-558)"
+title: "Replication of Judgments of Learning as Memory Modifiers by Soderstrom, N.C., Clark, C. T., Halamish, V. & Bjork, E. L. (2015, Journal of Experimental Psychology: Learning, Memory, and Cognition)"
 author: "Tay, Isabelle, Q. Y. (Graduate School of Education, Stanford University, 485 Lasuen Mall, Stanford, CA 94305)"
 date: "`r format(Sys.time(), '%B %d, %Y')`"
 output:
@@ -14,11 +14,10 @@ output:
 
 ##Introduction
 
-A link to the repository and to the original paper (as hosted in your repo). The goal is that we should be able to click on these links and review that your repo is formatted right and look at the original paper. 
 
-Metacognition is the cognition, or awareness, of one's own thought processes. A subset of metacognition, metamemory refers to "the processes and structures whereby people are able to examine the content of their memories, either prospectively or retrospectively, and make judgments or commmentaries about them" (Metcalfe & Dunlosky, 2008). The chosen study by Soderstrom et al. (2015) focused on whether metacognitive judgments of learning (JOLs) affects memory of studied word-pairs, and found that making JOLs enhanced later memory of the word-pairs being judged, but only for strongly-associated rather than weakly-associated word-pairs. I chose this study because of my research goals: I hope to find effective interventions (which may be motivational or cognitive) in enhancing memory. As a social psychologist, I have limited experience in studies in cognition. Hence, I chose this study precisely because of the opportunities for learning something new but relevant to my research goals.
+Metacognition is the cognition, or awareness, of one's own thought processes. A subset of metacognition, metamemory refers to "the processes and structures whereby people are able to examine the content of their memories, either prospectively or retrospectively, and make judgments or commmentaries about them" (Metcalfe & Dunlosky, 2008). The chosen study by Soderstrom and colleagues (2015) focused on whether metacognitive judgments of learning (JOLs) affects memory of studied word-pairs, and found that making JOLs enhanced later memory of the word-pairs being judged, but only for strongly-associated rather than weakly-associated word-pairs. I chose this study because of my research goals: I hope to find effective interventions (which may be motivational or cognitive) in enhancing memory. As a social psychologist, I have limited experience in studies in cognition. Hence, I chose this study precisely because of the opportunities for learning something new but relevant to my research goals.
 
-[Here is the original paper.](https://github.com/isabelletay/soderstrom2015/blob/master/original_paper.pdf)
+[Here is the original paper.](http://psycnet.apa.org/fulltext/2014-56008-001.pdf)
 
 
 ##Methods
@@ -26,7 +25,7 @@ Metacognition is the cognition, or awareness, of one's own thought processes. A 
 #Participants, materials, and procedure
 Following Experiment 2 in the study by Soderstrom and colleagues (2015), 60 participants were recruited online via Amazon's Mechanical Turk. "During the study phase, 60 cue-target word pairs were studied for a later memory test. Of these pairs, half were strongly related (e.g., blunt-sharp; pledge-promise) and half were weakly related (e.g., boxer-terrible; mercy-justice), according to the MRC Psycholinguistic Database (Coltheart, 1981). These pair types were randomly intermixed during study, with pairs exposed individually for 8 s on a computer screen. During exposure of each pair, the 20 participants assigned to the judgment condition were required to make a JOL to that pair by estimating the likelihood, on a 0-100% scale, of successfully recalling the pair on a later test, being prompted to do so half way through the exposure duration (i.e. after 4 s); whereas, the 20 participants assigned to the no-judgment condition made no JOLs during the 8-s exposure of each pair. Following the presentation of all pairs, participants played Tetris for 3 min and were then given a cued-recall test, in which they were presented with a sheet of paper containing all of the cue-words (in a randomized order) and asked to supply the appropriate target-word for each cue, being allowed 2.5 min for this test."
 
-The main challenges for me would be obtaining the appropriate word pairs from the MRC Psycholinguistic Database which are to be classified in either the strongly-related or weakly-related categories. Also, other challenges include setting up the test, which I plan to do on Qualtrics (includding embedding of the Tetris game), and using MTurk and other software in this course for the first time.
+The main challenges for me would be obtaining the appropriate word pairs from the MRC Psycholinguistic Database which are to be classified in either the strongly-related or weakly-related categories. Also, other challenges include setting up the test, which I plan to do on Qualtrics, and using MTurk and other software in this course for the first time.
 
 
 ###Power Analysis
